--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sandrine M'ZE - Développeuse Web</title>
+	<link rel="stylesheet" href="https://use.typekit.net/zhl8fzk.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="root"></div>
